# credit-agricole-account-statement

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/ca_account_statement/adapter/input/: InputAdapter.py
src/ca_account_statement/adapter/input/pdf/: PdfDocument.py  PdfWordsExtractor.py
src/ca_account_statement/adapter/input/pdf/parser/: AccountStatementNbrParser.py  EffectiveDateParser.py  ParsingContext.py
src/ca_account_statement/adapter/input/pdf/parser/table/: RowProcessor.py
src/ca_account_statement/adapter/input/pdf/parser/utils/: DateParser.py  DecimalParser.py
src/ca_account_statement/adapter/output/csv/: OperationsCsvExporter.py
src/ca_account_statement/application/: CreditAgricoleMonthlyStatementFactory.py  PdfToCsv.py
src/ca_account_statement/domain/: CreditAgricoleMonthlyStatement.py
src/credit_agricole_account_statement/adapter/input/: InputAdapter.py
src/credit_agricole_account_statement/adapter/input/pdf/: PdfDocument.py  PdfTableExtractor.py  PdfTextExtractor.py
src/credit_agricole_account_statement/adapter/input/pdf/parser/: EffectiveDateParser.py  ParsingContext.py
src/credit_agricole_account_statement/adapter/input/pdf/parser/table/: RowProcessor.py
src/credit_agricole_account_statement/adapter/output/csv/: OperationsCsvExporter.py
src/credit_agricole_account_statement/application/: CreditAgricoleMonthlyStatementFactory.py  PdfToCsv.py
src/credit_agricole_account_statement/domain/: Balances.py  CreditAgricoleMonthlyStatement.py  Operations.py
(+11 files in other folders)
